Fixed alignment of avatar

--- a/core/app/assets/stylesheets/base/topbar/notifications.css.less
+++ b/core/app/assets/stylesheets/base/topbar/notifications.css.less
@@ -58,7 +58,7 @@
 
         div.avatar {
           position: absolute;
-          top: 5px;
+          top: 10px;
           width: 30px;
 
           img {
